Ajout de l'interface Commande ainsi des classes associer CommandeIp, CommandeAdd, CommandeQuit ... et de la classe DnsTUI qui les utilises et parse les commandes taper par l'utilisateur. Enfin renommage de la classe App en DnsApp qui fait tourner l'App dans une boucle infini et exécute les commandes entrée par l'utilisateur (exit ou quit pour sortir de la boucle)